--- a/zabava.html
+++ b/zabava.html
@@ -82,103 +82,114 @@
     <!-- site attractioncard start -->
     <section class="entertainmentcard">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
+            <div class="row casino">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="homemain__picture casino">
                         <img src="images/entertainmentcard1.jpg" class="img-fluid" alt="entertainmentcard1">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part casino">
                         <h3>Casino Hotel Caro: Zábava a Relaxace v Karlových Varech </h3>
                         <p>Kasino: Casino Hotel Caro v Karlových Varech nabízí kasino s bohatou nabídkou her a
                             pravidelnými turnaji. </p>
                         <p> Ubytování: Ubytování v tomto hotelu je spojené s luxusním wellness centrem a restaurací, což
                             vám umožní zážitek plný odpočinku a relaxace. </p>
-                        <div class="hotel-btn">
-                            <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
-                                více</a>
-                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <div class="hotel-btn casino">
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                            více</a>
                     </div>
                 </div>
             </div>
-            <div class="row flex-wrap-reverse">
+            <div class="row casino">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="homemain__picture casino">
+                        <img src="images/entertainmentcard2.jpg" class="img-fluid" alt="entertainmentcard2">
+                    </div>
+                </div>
                 <div class="col-lg-6  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part casino">
                         <h3>Casino Atrium Hilton Prague: Hazardní Zábava u Staroměstského Náměstí </h3>
                         <p>Kasino: Toto kasino v centru Prahy v hotelu Hilton nabízí široký výběr her a turnajů pro
                             náročné hráče. </p>
                         <p> Ubytování: Máte k dispozici luxusní pokoje v blízkosti historických památek, jako je
                             Staroměstské náměstí a Karlův most. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat více</a>
-                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
-                        <img src="images/entertainmentcard2.jpg" class="img-fluid" alt="entertainmentcard2">
+                <div class="col-lg-2 col-sm-12">
+                    <div class="hotel-btn casino">
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                            více</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
-                        <img src="images/entertainmentcard3.jpg" class="img-fluid" alt="attractioncard3">
+            <div class="row casino">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="homemain__picture casino">
+                        <img src="images/entertainmentcard3.jpg" class="img-fluid" alt="entertainmentcard3">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part casino">
                         <h3>Grandhotel Pupp: Historický Glamour a Kasino v Karlových Varech</h3>
                         <p>Kasino: Grandhotel Pupp je známý svým elegantním kasinem, které hostí mezinárodní pokerové
                             turnaje a nabízí klasické kasinové hry.
                         </p>
                         <p>Ubytování: Ubytování v tomto historickém hotelu je zážitkem samým o sobě, a to v jednom z
-                            nejprestižnějších hotelů v Karlových Varech. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.pupp.cz/ ">Ukázat
-                                více</a>
-                        </div>
+                            nejprestižnějších hotelů v Karlových Varech.</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <div class="hotel-btn casino">
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                            více</a>
                     </div>
                 </div>
             </div>
-            <div class="row flex-wrap-reverse">
+            <div class="row casino">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="homemain__picture casino">
+                        <img src="images/entertainmentcard4.jpg" class="img-fluid" alt="entertainmentcard4">
+                    </div>
+                </div>
                 <div class="col-lg-6  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part casino">
                         <h3>Casino Admiral Kleopatra: Moderní Kasino na Pomezí Čech a Bavorska</h3>
                         <p>Kasino: Casino Admiral Kleopatra je moderním a vzrušujícím kasinem na hranicích České
                             republiky a Bavorska s širokým výběrem her.</p>
                         <p>Ubytování: V okolí naleznete různé ubytovací možnosti, které vám umožní objevit krásy české
                             krajiny. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.casinoadmiralpraha.cz/palladium ">Ukázat
-                                více</a>
-                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
-                        <img src="images/entertainmentcard4.jpg" class="img-fluid" alt="entertainmentcard4">
+                <div class="col-lg-2 col-sm-12">
+                    <div class="hotel-btn casino">
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                            více</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
+            <div class="row casino">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="homemain__picture casino">
                         <img src="images/entertainmentcard5.jpg" class="img-fluid" alt="entertainmentcard5">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part casino">
                         <h3>Casino Hotel Savannah: Hráčský Ráj v Západních Čechách </h3>
                         <p>Kasino: Casino Hotel Savannah vždy připravuje speciální nabídky a turnaje pro své hosty.
                             Vyzkoušejte štěstí na hracích automatech nebo u stolních her.</p>
                         <p>Ubytování: Hotel Savannah vám nabízí pohodlné ubytování ve městě Mariánské Lázně, což je
                             skvělý výchozí bod pro objevování krás Západních Čech. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.hotel-savannah.com/cz/kasino/ ">Ukázat
-                                více</a>
-                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <div class="hotel-btn casino">
+                        <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                            více</a>
                     </div>
                 </div>
             </div>
