--- a/hotely.html
+++ b/hotely.html
@@ -66,6 +66,13 @@
     <!-- site hotelcard start -->
     <section class="hotelcard">
         <div class="container">
+        <div class="row">
+            <div class="homecard__text hotel">
+                <h3>Objevte nejlepší hotely v České republice</h3>
+                <p>Česká republika se svou bohatou historií, úchvatnou architekturou a živoucí kulturou je pro cestovatele fascinující destinací. Při plánování návštěvy tohoto evropského klenotu je jedním z nejdůležitějších rozhodnutí, kde se ubytovat. Země nabízí širokou škálu možností ubytování, ale pro ty, kteří hledají jedinečný a požitkářský zážitek, vynikají tři typy: butikové hotely, kasino hotely a lázeňská střediska. 
+                </p>
+                  </div>
+                  </div>
             <div class="row">
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
@@ -107,12 +114,50 @@
                         </div>
                     </div>
                 </div>
+                <div class=".col-lg-6 col-md-6 col-sm-12">
+                    <div class="hotelcard__main">
+                        <div class="hotel__numeric">
+                            03
+                        </div>
+                        <div class="hotelcard__picture">
+                            <a href="https://www.ariahotel.net/" target="_blank"><img src="images/hotelcard12.jpg"
+                                    class="img-fluid" alt="hotelcard12"></a>
+                        </div>
+                    </div>
+                    <div class="hotelcard__part">
+                        <h3>Casino Pupp, Karlovy Vary</h3>
+                        <h4>Místo: Karlovy Vary</h4>
+                        <p>Karlovy Vary, známé pro svou lázeňskou kulturu a dechberoucí architekturu, hostí Casino Pupp. Nachází se v historickém Grandhotelu Pupp a nabízí klasický herní zážitek spolu s luxusním ubytováním. Je to ideální místo pro ty, kteří hledají rovnováhu mezi relaxací a zábavou. </p>
+                        <div class="hotel-btn">
+                            <a href="https://casinopupp.cz/ " target="_blank">Ukázat více</a>
+                        </div>
+                    </div>
+                </div>
+                <div class=".col-lg-6 col-md-6 col-sm-12">
+                    <div class="hotelcard__main">
+                        <div class="hotel__numeric">
+                            04
+                        </div>
+                        <div class="hotelcard__picture">
+                            <a href="https://www.ariahotel.net/" target="_blank"><img src="images/hotelcard13.jpg"
+                                    class="img-fluid" alt="hotelcard13"></a>
+                        </div>
+                    </div>
+                    <div class="hotelcard__part">
+                        <h3>Casino Admiral, Praha</h3>
+                        <h4>Místo: Praha </h4>
+                        <p>Casino Admiral se nachází v Praze a je součástí Admiral Hotelu. Toto kasino nabízí širokou škálu her a je pohodlně umístěno v centru města, což vám umožňuje snadný přístup k atrakcím a zábavě města. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.casinoadmiralpraha.cz/de/ " target="_blank">Ukázat více</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            03
+                            05
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.grandmark.cz/" target="_blank"><img src="images/hotelcard3.jpg"
@@ -131,7 +176,7 @@
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            04
+                            06
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.chateaumcely.cz/" target="_blank"><img src="images/hotelcard4.jpg"
@@ -152,7 +197,7 @@
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            05
+                            07
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.carlsbad-plaza.com/en/utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank"><img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5"></a>
@@ -172,7 +217,26 @@
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            06
+                            08
+                        </div>
+                        <div class="hotelcard__picture">
+                            <a href="https://www.carlsbad-plaza.com/en/utm_source=google&utm_medium= organic&utm_campaign=Knowledge_Graph" target="_blank"><img src="images/hotelcard14.jpg" class="img-fluid" alt="hotelcard14"></a>
+                        </div>
+                    </div>
+                    <div class="hotelcard__part">
+                        <h3>Casino Ostrava, Ostrava</h3>
+                        <h4>Místo: Ostrava </h4>
+                        <p>Casino Ostrava nabízí dynamický herní zážitek ve vzrušujícím městě Ostrava, které je proslulé svou průmyslovou historií. Mercure Ostrava Center, kde se kasino nachází, poskytuje moderní a pohodlné ubytování, což zajišťuje, že váš pobyt bude zároveň zábavný a pohodlný.</p>
+                        <div class="hotel-btn">
+                            <a href="https://www.worldcasinos.info/czech/casino-kartac-ostrava/" target="_blank">Ukázat
+                                více</a>
+                        </div>
+                    </div>
+                </div>
+                <div class=".col-lg-6 col-md-6 col-sm-12">
+                    <div class="hotelcard__main">
+                        <div class="hotel__numeric">
+                            09
                         </div>
                         <div class="hotelcard__picture">
                             <a href="http://www.svamberskydum.cz/new/" target="_blank"><img src="images/hotelcard6.jpg" class="img-fluid" alt="hotelcard6"></a>
@@ -187,12 +251,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            07
+                            10
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.esplanade-marienbad.cz/cs/" target="_blank"><img src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7"></a>
@@ -207,10 +269,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            08
+                            11
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.hotelruze.cz/ " target="_blank"><img src="images/hotelcard8.jpg"
@@ -226,12 +290,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class=".col-lg-6 col-md-6 col-sm-12">
                     <div class="hotelcard__main">
                         <div class="hotel__numeric">
-                            09
+                            12
                         </div>
                         <div class="hotelcard__picture">
                             <a href="https://www.fourseasons.com/prague/utm_source=google&utm_mediu m=organicsearch&utm_campaign=tor-prg-hre-mid-seo-na&utm_content=n a-na&utm_term=na " target="_blank"><img src="images/hotelcard9.jpg" class="img-fluid" alt="hotelcard9"></a>
@@ -258,9 +320,20 @@
         <div class="container">
             <div class="row">
                 <div class="end__content">
-                    <p>Pamatujte, že nejlepší hotel pro vás závisí na vašich osobních preferencích a plánech cesty. Ať
-                        už hledáte historický šarm, moderní luxus nebo relaxaci v lázních, Česká republika nabízí různé
-                        ubytovací možnosti, které vyhovují vašim potřebám. </p>
+                  <h4>Nejlepší tipy při výběru toho správného hotelu pro vás. Ať už si zarezervujete luxusní lázeňský resort, okouzlující butikový pobyt nebo hotel nabízející zábavné kasino a herní zážitky, vždy doporučujeme dodržovat následující tipy: </h4>
+                  <p>Podívejte se na speciální nabídky: </p>
+                  <p>Mnoho hotelů nabízí akce, slevy nebo balíčky. Nezapomeňte se podívat na speciální nabídky, které vám mohou pomoci ušetřit peníze nebo zvýšit hodnotu vašeho pobytu. Vysvětlení zásad zrušení: 
+                </p>
+                  <p>Před rezervací si přečtěte storno podmínky hotelu. Život je nepředvídatelný a možná budete muset změnit své plány. Znalost podmínek zrušení vám může ušetřit zbytečné poplatky. 
+                </p>
+                  <p>Zvažte své cestovní společníky:</p>
+                  <p>Pokud cestujete s rodinou, přáteli nebo dětmi, ujistěte se, že hotel může vaši skupinu pohodlně ubytovat. Některé hotely nabízejí služby a zařízení vhodné pro rodiny. Bezpečnost a zabezpečení:
+                </p>
+                  <p>Prozkoumejte bezpečnost a zabezpečení umístění hotelu. Přečtěte si o míře kriminality v této oblasti a vyberte si hotel s dobrými bezpečnostními opatřeními. Přístupnost: 
+                </p>
+                <p>Pokud máte specifické požadavky na mobilitu nebo bezbariérovost, zkontrolujte, zda hotel nabízí vybavení, jako jsou rampy pro vozíčkáře, výtahy a bezbariérové pokoje. Kontaktujte přímo hotel: 
+                </p>
+                <p>Pokud máte konkrétní dotazy nebo požadavky, neváhejte kontaktovat přímo hotel telefonicky nebo e-mailem. To vám může pomoci objasnit jakékoli pochybnosti a posoudit schopnost personálu reagovat.</p>
                 </div>
             </div>
         </div>
